# my_qwasar_lib

./: LICENSE  README.md
asm/my_libasm_435_belus_l_suk/: README.md
asm/my_yield_WIP/: Makefile
asm/my_yield_WIP/include/: my_yield.h
asm/my_yield_WIP/src/: main.c
c/extra/: intersection.c  my_csv_parser.c  my_data_process.c  my_data_transform.c  my_join.c  rostring.c
c/extra/my_join/: ord_alphlong.c
c/my_bc_296_belus_l_ynf/: Makefile  README.md  debug  test_result.txt
c/my_bc_296_belus_l_ynf/include/: main_header.h  my_error_handler.h  my_parser.h  my_rpn.h  my_stack.h  my_string.h  non_standard_header.h  shunting_yard.h
c/my_bc_296_belus_l_ynf/src/: main.c  main_helper.c
c/my_blockchain_173_belus_l_nmq/: Makefile  README.md  log.md  result_UNIT_TEST_01_19_2023.txt  result_UNIT_TEST_02_03_2023.txt
c/my_blockchain_173_belus_l_nmq/include/: main_header.h  my_backup.h  my_blockchain_check.h  my_error_management.h  my_linkedlist.h  my_string.h  my_unistd.h  (+1 more)
c/my_bsq_294_belus_l_gtc/: Makefile  README.md  result_unitest_03_01_2023_10h43.txt
c/my_curl_368_belus_l_zr1/: Makefile  README.md  result3.txt
c/my_libasm_435_belus_l_suk/: file.txt
c/my_ls_163_belus_l_vff/: Makefile  README.md  main.c
c/my_malloc_436_belus_l_m1a/: Makefile  README.md
c/my_mouse_297_belus_l_s4n/: Makefile  README.md
c/my_printf_70028_vfhfqu/: Makefile  README.md  main.c
c/my_readline_172_belus_l_6f-/: README.md  big_file.txt  edge_cases_empty_lines.txt  log.txt  my_readline.c
c/my_tar_166_belus_l_egy/: .gitignore  Makefile  README.md  main.c  zz_cmplx_test _cf _rf_diff.sh  zz_simple_test_cf_rf_tf_diff.sh  zz_simple_test_cf_uf_diff.sh  zz_simple_test_cf_xf.sh
c/my_zsh_402_belus_l_u1y/: Makefile  README.md
cpp/extra/: Maximum_Average_Subarray_I.cpp
cpp/my_abstract_vm_508_belus_l_var/: 01_sample.avm  02_sample.avm  03_sample.avm  Makefile  README.md  sample.avm
cpp/my_cpp_redis_client_575_belus_l_svg/: CMakeLists.txt  Dockerfile  README.md  localfile.csv
cpp/my_cpp_redis_client_575_belus_l_svg/.github/workflows/: gandalf.yaml  upskill_approved.yaml  upskill_comments.yaml
cpp/my_cpp_redis_client_575_belus_l_svg/include/: main_header.hpp  my_redis_client.hpp  my_tests.hpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/: CMakeLists.txt  Makefile  README.md
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/include/: main_CLI_header.h  main_header.hpp  my_client_move.hpp  my_cmd.hpp  my_getopt.hpp  my_libasm.h  my_parser.h  my_readline.h  my_unistd.h  non_standard_header.h  zz00_my_main_lang.hpp  zz01_support_fn.hpp  zz02_my_lang_param.hpp  zz03_my_syntax.hpp  zz04_my_instructions.hpp  zz05_my_lexer.hpp  zz06_my_parser.hpp  zz07_my_executor.hpp  zz08_my_custom_error.hpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/: main.c  main.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/lx_ps_ex/: zz01_support_fn.cpp  zz04_instructions.cpp  zz05_lexer.cpp  zz06_parser.cpp  zz07_executor.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/my_cmd/: my_cmd.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/my_libasm/: my_strcpy.asm
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/my_readline/: my_readline.c
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/my_unistd/: dynamic_malloc.c  fill_bool_arr.c  flag_state.c  free_opt.c
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/non_standard_fn/: count_cmd.c  my_ctoi.c
cpp/my_cpp_redis_client_575_belus_l_svg/redis_cli/src/tokenizer/: tokenizer.c
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/: CMakeLists.txt
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/cmake/: Config.cmake.in  pkg-config.pc.in
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/include/: main_header.hpp  my_redis_client.hpp  my_tests.hpp  rediPack
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/src/: main.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/src/cmd/: common.cpp  hashes.cpp  key_pair.cpp  lists.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/src/connection/: connection.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/redis_client_api/src/pre_test/: c_test.cpp  cpp_test.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/src/: main.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/src/connection/: connection.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/src/pre_test/: c_test.cpp  cpp_test.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/test_feature/include/: main_header.hpp  my_format_shift.hpp  my_tests.hpp
cpp/my_cpp_redis_client_575_belus_l_svg/test_feature/src/my_format_shift/: my_format_shift.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/test_feature/src/test/: test_csv2.cpp  test_json.cpp
cpp/my_cpp_redis_client_575_belus_l_svg/tests/: redis_api_test.cc
cpp/my_ftp_509_belus_l_cwo/: Makefile  README.md
my_curl_368_belus_l_zr1/include/: main_header.h  my_error_handler.h  my_parser.h
my_malloc_436_belus_l_m1a/: Makefile  README.md
my_malloc_436_belus_l_m1a/include/: main_header.h  my_bitmap.h  my_free_list.h
my_malloc_436_belus_l_m1a/src/: main.old
my_zsh_402_belus_l_u1y/include/: main_header.h  my_cmd_invite.h  my_env.h  my_execute.h  my_readline.h  my_stdio.h
my_zsh_402_belus_l_u1y/src/: main.c
python/: average_of_levels_in_binary_tree.py  binary_prefix_divisible_by_.py  brackets.py  capitalize.py  find_word_that_be_formed.py  frog_jump.py  longest_arithmetic_subsequence.py  maximum_gap.py  number_of_atoms.py  pascals_triangle_ii.py  print_duplicates.py  remove_duplicate_letters.py  satisfiability_of_equality_equations.py  str_maxlenoc.py  task_scheduler.py  valid_anagram.py
ruby/my_ruby_lib/: LICENSE  README.md
rust/my_rust_mastermind_679_belus_l_f4_/: README.md
rust/my_string_rust_646_belus_l_pai/: README.md  result.txt
rust/rust-quest01_608_belus_l_vpz/: README.md
rust/rust-quest02_609_belus_l_4vv/: README.md
rust/rust-quest03_610_belus_l_3cb/: README.md
rust/rust-quest04_611_belus_l_rdn/: README.md
rust/rust-quest05_644_belus_l_fks/: README.md
rust/rust-quest06_645_belus_l_7vz/: README.md
(+482 files in other folders)
